@@ -47,7 +47,6 @@
         'ENABLE_DASHBOARD_SUPPORT=0',
         'ENABLE_DOM_STORAGE=1',
         'ENABLE_GEOLOCATION=1',
-        'ENABLE_JAVASCRIPT_DEBUGGER=0',
         'ENABLE_JSC_MULTIPLE_THREADS=0',
         'ENABLE_ICONDATABASE=0',
         'ENABLE_INDEXED_DATABASE=1',
