@@ -1,3 +1,15 @@
+2010-02-05  Mikhail Naganov  <mnaganov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Enable JAVASCRIPT_DEBUGGER in chromium port.
+
+        https://bugs.webkit.org/show_bug.cgi?id=34638
+
+        * page/Console.cpp:
+        * page/Console.h:
+        * page/Console.idl:
+
 2010-02-05  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Timothy Hatcher.
